anime-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aninja-anime-service
  template:
    metadata:
      labels:
        app: aninja-anime-service
    spec:
      containers:
        - name: aninja-anime-service
          image: rtrydev/aninja-anime-service:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: anime-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: aninja-anime-service
  ports:
    - name: aninja-anime-service
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
