anime-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: animenpservice-srv
spec:
  type: NodePort
  selector:
    app: aninja-anime-service
  ports:
    - name: aninja-anime-service
      protocol: TCP
      port: 80
      targetPort: 80
