anime-postgresql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-postgresql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime-postgresql
  template:
    metadata:
      labels:
        app: anime-postgresql
    spec:
      containers:
        - name: anime-postgresql
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: anime-postgresql-pv
              mountPath: /data
      volumes:
        - name: anime-postgresql-pv
          persistentVolumeClaim:
            claimName: anime-postgresql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: anime-postgresql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: anime-postgresql
  ports:
    - name: anime-postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: anime-postgresql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: anime-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
