browse-postgresql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browse-postgresql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/posrgresql/data
              name: browse-postgresqldb
      volumes:
        - name: browse-postgresqldb
          persistentVolumeClaim:
            claimName: postgresql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: browse-postgresql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: browse-postgresql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
