tags-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tags-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aninja-tags-service
  template:
    metadata:
      labels:
        app: aninja-tags-service
    spec:
      containers:
        - name: aninja-tags-service
          image: rtrydev/aninja-tags-service:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tags-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: aninja-tags-service
  ports:
    - name: aninja-tags-service
      protocol: TCP
      port: 80
      targetPort: 80
