tags-postgresql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres
          ports:
            - containerPort: 5433
          volumeMounts:
            - mountPath: /var/lib/posrgresql/data
              name: tags-postgresqldb
      volumes:
        - name: tags-postgresqldb
          persistentVolumeClaim:
            claimName: postgresql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: tags-postgresql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5433
---
apiVersion: v1
kind: Service
metadata:
  name: tags-postgresql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5433
