ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: rtrydev.com
      http:
        paths:
          - path: /api/anime
            pathType: Prefix
            backend:
              service:
                name: browse-clusterip-srv
                port:
                  number: 8080
          - path: /api/c/anime
            pathType: Prefix
            backend:
              service:
                name: tags-clusterip-srv
                port:
                  number: 8080
